--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt-permissions": "^1.3.7",
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.27",
     "mongodb-memory-server": "^8.10.2",
