--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.6"
   },
